--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,12 @@
-FROM public.ecr.aws/nginx/nginx:perl
+FROM node:16-slim as builder
+WORKDIR /app
+COPY client ./
+RUN npm install
+RUN npm run build
 
-COPY build /usr/share/nginx/html
+# Use Nginx to serve the build app
+FROM nginx:alpine
+COPY --from=builder /app/build /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
 
